tests/error/forcing/args.mml
let f (x :int) = x && true in f 3
